--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,10 +9,14 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "chart.js": "^2.9.2",
     "core-js": "^2.6.5",
     "sweetalert2": "^8.18.6",
+    "vee-validate": "^3.0.11",
     "vue": "^2.6.10",
+    "vue-graph": "^0.8.6",
     "vue-router": "^3.1.3",
+    "vuelidate": "^0.7.4",
     "vuetify": "^2.1.0"
   },
   "devDependencies": {
